; ModuleID = '/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_syscfg.c_SYSCFG_DeInit.c'
source_filename = "/home/carl/AnghaBench/anypixel/firmware/display/ThirdParty/SPL/src/extr_stm32f0xx_syscfg.c_SYSCFG_DeInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64*, i32 }

@SYSCFG_CFGR1_MEM_MODE = common dso_local global i32 0, align 4
@SYSCFG = common dso_local global %struct.TYPE_2__* null, align 8
@SYSCFG_CFGR2_SRAM_PE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SYSCFG_DeInit() #0 {
  %1 = load i32, i32* @SYSCFG_CFGR1_MEM_MODE, align 4
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 2
  %4 = load i32, i32* %3, align 8
  %5 = and i32 %4, %1
  store i32 %5, i32* %3, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i64*, i64** %7, align 8
  %9 = getelementptr inbounds i64, i64* %8, i64 0
  store i64 0, i64* %9, align 8
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i64*, i64** %15, align 8
  %17 = getelementptr inbounds i64, i64* %16, i64 2
  store i64 0, i64* %17, align 8
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 1
  %20 = load i64*, i64** %19, align 8
  %21 = getelementptr inbounds i64, i64* %20, i64 3
  store i64 0, i64* %21, align 8
  %22 = load i64, i64* @SYSCFG_CFGR2_SRAM_PE, align 8
  %23 = trunc i64 %22 to i32
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @SYSCFG, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = or i32 %26, %23
  store i32 %27, i32* %25, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
